# cp-library

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  example.test.cpp  main.cpp  template.cpp
.verify-helper/: config.toml
Binary Search Trees/: ImplicitSplayTree.cpp  ImplicitTreap.cpp  SplayTree.cpp  Treap.cpp
Combinatorics/: Choose.cpp  Fibonacci.cpp
Custom Datatypes/: Signed128.cpp  Tensor.cpp  Triple.cpp  Unsigned128.cpp
Data Structures/: DisjointSparseTable.cpp  FenwickTree.cpp  FenwickTree2D.cpp  MergeSortTree.cpp  MergeSortTreeU.cpp  SegmentTree.cpp  SegmentTreeI.cpp  SegmentTreeL.cpp  SegmentTreeM.cpp  SegmentTreeP.cpp  SegmentTreePL.cpp  SparseTable.h  SparseTable2D.cpp  Treap.cpp  UnionFind.h  UnionFindRB.cpp  UnionFindSL.cpp
Flows/: Dinic.cpp  EdmondsKarp.cpp  FlowGraph.h  FlowGraphC.h  HungarianAlgorithm.cpp  Matching.cpp  MinCostFlow.cpp  PushRelabel.cpp
Geometry/: ClosestPairOfPoints.cpp  ConvexHull.cpp  Point.h  Polygon.cpp
Graphs/: 2SAT.cpp  BellmanFord.cpp  Diameter.cpp  Dijkstra.cpp  Eulerian.cpp  FloydWarshall.cpp  Graph.h  GraphW.h  Kruskal.cpp  LCA.cpp  PathQuery.cpp  SCC.cpp  SubtreeQuery.cpp  TopSort.cpp
Miscellaneous/: CHT.cpp  Misc.cpp  TypePromotion.h
Number Theory/: ExtendedEuclidean.cpp  Factorisation.cpp  ModularArithmetic.cpp  ModularArithmetic.h  PrimalityTesting.cpp  Sieve.cpp
Numeric/: Dynamic-Mint.cpp  DynamicMint.cpp  FWHT.cpp  Gaussian-Elimination.cpp  Matrix.h  Montgomery-Mint.cpp  NTT.cpp  Polynomial.cpp  Rational.cpp  Static-Mint.h  StaticMint.h
Polynomial/: Evaluation-Interpolation.cpp  FFT.cpp  NTT.h  Polynomial.h  Subset-Convolution.cpp
Strings/: AhoCorasick.cpp  Manacher.cpp  PatternMatching.cpp  StringHashing.cpp  SuffixArray.cpp  SuffixAutomaton.cpp  SuffixTrie.cpp  Trie.h
Trees/: CentroidDecomposition.cpp  HeavyLight.cpp  LCA.cpp  LCT.cpp  PathQuery.cpp  SubtreeQuery.cpp
algebra/: affine_function.hpp  concepts.hpp  fraction.hpp  type-traits.hpp
binary-trees/: ahnentafel-based-binary-tree.hpp  array-based-binary-tree.hpp  binary-tree.hpp  dynamic-binary-tree.hpp  pointer-based-binary-tree.hpp
combinatorics/: binomial.hpp  fibonacci.hpp
data-structures/: bitwise-trie.hpp  fenwick-tree.hpp  static-wavelet-tree.hpp
data_structures/: bitwise_trie.hpp  dynamic_bitset.hpp  static_wavelet_tree.hpp  tensor.hpp
flows/: bipartite-matching.hpp  dinic.hpp  edmonds-karp.hpp  flow-graph-weighted.hpp  flow-graph.hpp  hungarian-algorithm.hpp  min-cost-flow.hpp  min-cut.hpp  push-relabel.hpp
geometry/: closest-pair-of-points.hpp  closest_pair_of_points.hpp  convex-hull.hpp  convex_hull.hpp  li-chao-tree-int.hpp  li-chao-tree.hpp  point.hpp  polygon.hpp
graph/: concepts.hpp  diameter.hpp  directed_graph.hpp  edge.hpp  graph.hpp  two_sat.hpp  undirected_graph.hpp
graphs/: bellman-ford.hpp  concepts.hpp  diameter.hpp  dijkstra.hpp  directed_graph.hpp  edge.hpp  eulerian.hpp  floyd-warshall.hpp  graph-weighted.hpp  graph.hpp  kruskal.hpp  scc.hpp  topological-sort.hpp  two-sat.hpp  two_sat.hpp  undirected_graph.hpp
hashing/: perfect-hashing.hpp  static-hashing.hpp
helper-macros/: define-has-data-member.hpp  define-has-method.hpp  define-has-static-method.hpp  define-has-typedef.hpp
linear_algebra/: determinant.hpp  inv.hpp  matrix.hpp  rank.hpp  row_echelon_form.hpp  (+1 more)
(+366 files in other folders)
